added js for the select items

--- a/src/style.css
+++ b/src/style.css
@@ -40,7 +40,7 @@ footer {
   border-radius: 10px;
 }
 
-.cities {
+.city {
   display: flex;
   justify-content: space-between;
   margin: 10px 0;
@@ -48,7 +48,7 @@ footer {
   padding: 20px 0;
 }
 
-.cities:last-child {
+.city:last-child {
   border: none;
 }
 
