--- a/src/style.css
+++ b/src/style.css
@@ -63,3 +63,10 @@ footer {
   vertical-align: middle;
   font-weight: normal;
 }
+
+.home-page-link {
+  text-align: center;
+  font-size: 15px;
+  color: rgba(0, 0, 0, 0.7);
+  text-decoration: none;
+}
