--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #f9f7fe;
+  background-color: #e4f4f1;
   font-family: sans-serif;
 }
 
@@ -22,6 +22,10 @@ select {
   font-size: 18px;
 }
 
+a {
+  color: #62c495;
+}
+
 footer {
   text-align: center;
   font-size: 15px;
@@ -35,7 +39,7 @@ footer {
 .container {
   max-width: 600px;
   margin: 60px auto;
-  background-color: white;
+  background-color: whitesmoke;
   padding: 30px;
   box-shadow: 0px 7px 29px 0px rgba(100, 100, 111, 0.2);
   border-radius: 10px;
